[metadata]
name = django-docme
version = 0.1.4
description = A Django app to generate documentation from behave tests.
url = https://github.com/whanderley/django-docme
long_description = file: README.md
long_description_content_type = text/markdown
author = Whanderley Souza Freitas
author_email = whanderley.souza@iff.edu.br
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
install_requires = django-wkhtmltopdf; pdfkit
